Have working draft of complete mobile menu - solve for link spacing

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -54,7 +54,7 @@
 
   .mobile-navlist {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     justify-content: space-around;
     list-style-type: none;
@@ -66,7 +66,7 @@
   }
 
   .nav-list-item {
-    font-size: 2rem;
+    font-size: 1.75rem;
     padding: 0;
     margin: 18px 0;
   }
@@ -93,5 +93,10 @@
   .nav-list-item:last-child {
     border: none;
     font-weight: 800;
+  }
+
+  .link p {
+    margin: 0;
+    padding: 0;
   }
 }
